validated css files and added useful comments to classes

--- a/landing.css
+++ b/landing.css
@@ -4,10 +4,12 @@ body {
 
 }
 
+/* Font Coloring for Landing Page */
 p {
     color: #efedf0;
 }
 
+/* Heading Attributes */
 .heading {
     font-weight: 400;
     color: #efedf0;
@@ -18,6 +20,7 @@ p {
     margin: 10% 0 0 15%;
 }
 
+/* Plant Image Attributes */
 .plant {
     height: auto;
     float: right;
@@ -27,6 +30,7 @@ p {
     margin: -31% 12% 0 0;
 }
 
+/* Woman Image Attributes */
 .woman {
     height: auto;
     float: right;
@@ -34,6 +38,7 @@ p {
     margin: -30% 10% 0 0;
 }
 
+/* Man Image Attributes */
 .yellowhoodie {
     height: auto;
     float: right;
@@ -41,6 +46,7 @@ p {
     margin: -30% 5% 0 0;
 }
 
+/* Login Button Attributes */
 .login {
     border-radius: 5px;
     font-size: 20px;
@@ -56,8 +62,9 @@ p {
     transition-duration: 0.5s;
     -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
-  }
-  
+}
+
+  /* Properties of Login Button Hover */ 
   .login:hover {
     background-color: #c5133d;
     color: #fff;
@@ -65,7 +72,7 @@ p {
   }
 
 
-
+/* Properties of Sign Up Button */
   .signup {
     border-radius: 5px;
     font-size: 20px;
@@ -83,6 +90,7 @@ p {
     -moz-transition-duration: 0.5s;
   }
   
+  /* Properties of Sign Up Button Hover */
   .signup:hover {
     background-color: #d7d5d5;
     color: #000;
