--- a/add-student.css
+++ b/add-student.css
@@ -18,7 +18,7 @@ p {
     font-size: 72px;
     letter-spacing: 0.05em;
     line-height: 130%;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .cancel {
@@ -27,6 +27,17 @@ p {
     margin-top: 3%;
     text-decoration: none;
     text-align: left;
+    font-size: 30px;
+    letter-spacing: 0.05em;
+    line-height: 100%;
+    background-color: #2e2d33;
+    color: #efedf0;
+}
+.save {
+    display: block;
+    margin-right: 3%;
+    text-decoration: none;
+    float: right;
     font-size: 30px;
     letter-spacing: 0.05em;
     line-height: 100%;
