--- a/add-student.css
+++ b/add-student.css
@@ -44,3 +44,25 @@ p {
     background-color: #2e2d33;
     color: #efedf0;
 }
+
+.box {
+    display: block;
+    background-color: #efedf0;
+    padding: 13%;
+    font-size: 10em;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    margin: 5%;
+  }
+ 
+  .searchDesign {
+    position: relative;
+    display: block;
+    font-size: 1.1em;
+    color: #efedf0;
+    background-color: #2e2d33;
+    float: left;
+    margin-left: 5%;
+    padding-right: 15%;
+    padding-bottom: 1%;
+  }
