--- a/signup.css
+++ b/signup.css
@@ -5,6 +5,39 @@
   font-family: 'Circular', sans-serif;
 }
 
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-25%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInRight {
+  0% {
+    transform: translateX(25%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInUp {
+  0% {
+    transform: translateY(25%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 body {
   width: 100%;
   height: auto;
@@ -57,6 +90,7 @@ nav a:hover, a:active {
 }
 
 .column-left {
+  animation: 1s ease-out 0s 1 slideInLeft;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -132,6 +166,7 @@ input[type='password'] {
 }
 
 .column-right {
+  animation: 1s ease-out 0s 1 slideInUp;
   display: flex;
   flex-direction: column;
   justify-content: center;
