changed colors on log in page

--- a/login.css
+++ b/login.css
@@ -93,7 +93,7 @@ nav a:hover, a:active {
 
 .form__label {
   font-family: 'Circular', sans-serif;
-  color: #efedf0;
+  color: #001220;
   margin-top: 0.7rem;
   font-size: 1vw;
   transition: all 0.3s;
