--- a/signup.css
+++ b/signup.css
@@ -97,14 +97,14 @@ nav a:hover, a:active {
   margin-top: 0.7rem;
   font-size: 1vw;
   transition: all 0.3s;
-  transform: translateY(0rem);
+  transform: translateY(0vw);
 }
 
 .form__input {
   font-family: 'Circular', sans-serif;
   color: #001220;
   margin: 0 auto;
-  padding: 1vw 1.5vw;
+  padding: 1.2vw 1.5vw;
   font-size: 1vw;
   border-radius: 0.16vw;
   background-color: #efedf0;
