--- a/css/select_class.css
+++ b/css/select_class.css
@@ -1,21 +1,40 @@
 body {
-    background-color: #2e2d33;
+    background-color: var(--background-color);
+    font-family: var(--font-family);
+    color: var(--color);
+    display: flex;
+    flex-direction: column;
 }
 
-#sign-out,
-#welcome-message,
-.class {
-    color: #efedf0;
-    font-family: 'Circular', sans--serif;
+#sign-out {
+    margin: 10px;
+    padding: 10px;
+    text-align: right;
+}
+
+#welcome-message {
+    text-align: center;
+}
+
+#option-box {
+    font-weight: 800;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .option {
-    background-color: #fff;
-    color: #f21a4c;
-    border-radius: 30px;
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--color);
+    color: #000000;
+    list-style: none;
+    border-radius: 10px;
+    min-width: 150px;
+    text-align: center;
 }
 
 #add-class {
-    background-colour: #d7d5d5;
-    color: #c5133d
+    background-colour: var(--secondary);
+    color: var(--color);
 }
