--- a/attendancereport.css
+++ b/attendancereport.css
@@ -1,63 +1,309 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+
+/* General styles */
+* {
+  font-family: 'Outfit', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Body styles */
 body {
-    background-color: #000000;
-    color: #FFFFFF;
-  }
+  width: 100%;
+  background: #181818;
+  position: relative;
+  display: flex;
+}
+
+/* Sidebar styles */
+#sidebar {
+  background: #101010;
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 .4rem .8rem #0005;
+}
+
+#sidebar .logo {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  padding: 30px 0 0 30px;
+}
+
+#sidebar .items {
+  margin-top: 60px;
+}
+
+#sidebar .items li {
+  list-style: none;
+  padding: 15px 0;
+  transition: 0.3s ease;
+}
+
+#sidebar .items li:hover {
+  background-color: #242424;
+  cursor: pointer;
+}
+
+#sidebar .items li:nth-child(1) {
+  border-left: 4px solid white;
+}
+
+
+#sidebar .items i {
+  color: rgb(202, 202, 202);
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 14px;
+  margin: 0 10px 0 25px;
+}
+
+#sidebar .items li:hover i,
+#sidebar .items li:hover a {
+  color: white;
+}
+
+#sidebar .items li a {
+  text-decoration: none;
+  left: 0;
+  color: #fff;
+  font-weight: 300;
+  transition: 0.3s ease;
+}
+
+/* Main content styles */
+#main-content {
+  width: calc(100% - 650px);
+  margin-left: 300px;
+  position: relative;
+}
+
+#main-content .welcome-name {
+  color: #fff;
+  padding: 75px 30px 0 30px;
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.statistics {
+  padding: 30px 30px 0 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.statistics .stat-boxes {
+  background: #1C1C1C;
+  width: 184px;
+  padding: 16px 20px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: 0 .4rem .8rem #0005;
+}
+
+.statistics .stat-boxes h3 {
+  color: #8685ef;
+  font-size: 48px;
+}
+
+.statistics .stat-boxes span {
+  color: #9c9a9a;
+  font-size: 24px;
+}
+
+.camera-display {
+  padding: 30px 30px 0 30px;
+  display: flex;
+}
+
+body {
+  background-color: #000000;
+  color: #FFFFFF;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+h1 {
+  font-size: 36px;
+  margin-bottom: 30px;
+  color:#8685ef;
+}
+
+form {
+  margin-bottom: 30px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+select, input[type="date"], button {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 30px;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+  border: 1px solid #FFFFFF;
+}
+
+th {
+  background-color: #FFFFFF;
+  color: #000000;
+}
+
+tr:nth-child(even) {
+  background-color: #1B1B1B;
+}
+
+tr:nth-child(odd) {
+  background-color: #000000;
+}
+
+tr:hover {
+  background-color: #424242;
+}
+
+
+
+.camera-display .camera-box {
+  background: #1C1C1C;
+  width: 100%;
+  height: 100%;
+  padding: 16px 20px;
+  border-radius: 15px;
+  box-shadow: 0 .4rem .8rem #0005;
+}
+
+#content-right {
+	width: 400px;
+	height: 100%;
+	margin-top: 70px;
+	margin-right: 80px;
+}
   
-  .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 50px;
-  }
+#content-right .table-box {
+	background: #1c1c1c;
+	width: 100%;
+	margin: 30px 30px 0 30px;
+	border-radius: 15px;
+	padding: 12px 12px 0 12px;
+	box-shadow: 0 .4rem .8rem #0005;
+}
   
-  h1 {
-    font-size: 36px;
-    margin-bottom: 30px;
-  }
+.table-box .status {
+	padding: 12px 12px 0 12px;
+	width: 24px;
+}
   
-  form {
-    margin-bottom: 30px;
-  }
+.table-box h3 {
+	color: #8685ef;
+	font-size: 20px;
+	padding: 10px;
+	text-align: center;
+}
   
-  label {
-    display: block;
-    margin-bottom: 10px;
-  }
+.status i {
+	color: red;
+	width: 24px;
+	height: auto;
+}
   
-  select, input[type="date"], button {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #FFFFFF;
-    margin-right: 10px;
-    margin-bottom: 10px;
-  }
+.student-name {
+	padding: 12px;
+}
+
+.student-info p {
+	color: rgb(220, 220, 220);
+}
+
+.student-info h2 {
+	color: #8685ef;
+}
   
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 30px;
-  }
+.student-name h5 {
+	color: rgb(220, 220, 220);
+	font-size: 18px;
+}
+ 
+.student-name p {
+	color:rgb(170, 170, 170);
+	font-size: 14px;
+}
   
-  th, td {
-    padding: 10px;
-    text-align: left;
-    border: 1px solid #FFFFFF;
-  }
+.student-id, .student-grade, .student-enrolled {
+	color:rgb(170, 170, 170);
+	font-size: 14px;
+	padding: 12px;
+}
   
-  th {
-    background-color: #FFFFFF;
-    color: #000000;
-  }
+.student-id span, .student-grade span, .student-enrolled span {
+	color: #8685ef;
+	font-size: 16px;
+	margin-left: 10px;
+}
   
-  tr:nth-child(even) {
-    background-color: #1B1B1B;
-  }
+.student-id i, .student-grade i, .student-enrolled i {
+	color: rgb(170, 170, 170);
+	font-size: 18px;
+	margin-right: 10px;
+}
   
-  tr:nth-child(odd) {
-    background-color: #000000;
-  }
+#footer {
+	background-color: #101010;
+	height: 80px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
   
-  tr:hover {
-    background-color: #424242;
-  }
+#footer p {
+	color: rgb(170, 170, 170);
+	font-size: 14px;
+}
   
+#footer a {
+	color: rgb(170, 170, 170);
+	font-size: 14px;
+	margin-left: 5px;
+}
+  
+#footer a:hover {
+	color: white;
+}
+
+.absent{
+  color: #FF5349;
+}
+.present{
+  color: #226F54;
+}
