--- a/studentinformation.css
+++ b/studentinformation.css
@@ -10,7 +10,7 @@
 .student {
 	margin: 20px;
 	padding: 20px;
-	width: calc(33.33% - 40px);
+	width: calc(25% - 40px);
 	border: 1px solid #ccc;
 	text-align: center;
 	box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
@@ -20,4 +20,26 @@
 	max-width: 100%;
 	height: auto;
 	margin-bottom: 20px;
+}
+
+@media screen and (max-width: 1200px) {
+	.student {
+		width: calc(33.33% - 40px);
+	}
+}
+
+@media screen and (max-width: 992px) {
+	.student {
+		width: calc(50% - 40px);
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.container {
+		flex-direction: column;
+		align-items: stretch;
+	}
+	.student {
+		width: 100%;
+	}
 }
