--- a/studentinformation.css
+++ b/studentinformation.css
@@ -1,45 +1,238 @@
-.container {
-	max-width: 1200px;
-	margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+
+/* General styles */
+* {
+  font-family: 'Outfit', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Body styles */
+body {
+  width: 100%;
+  background: #181818;
+  position: relative;
+  display: flex;
+}
+
+/* Sidebar styles */
+#sidebar {
+  background: #101010;
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 .4rem .8rem #0005;
+}
+
+#sidebar .logo {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  padding: 30px 0 0 30px;
+}
+
+#sidebar .items {
+  margin-top: 60px;
+}
+
+#sidebar .items li {
+  list-style: none;
+  padding: 15px 0;
+  transition: 0.3s ease;
+}
+
+#sidebar .items li:hover {
+  background-color: #242424;
+  cursor: pointer;
+}
+
+#sidebar .items li:nth-child(1) {
+  border-left: 4px solid white;
+}
+
+
+#sidebar .items i {
+  color: rgb(202, 202, 202);
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 14px;
+  margin: 0 10px 0 25px;
+}
+
+#sidebar .items li:hover i,
+#sidebar .items li:hover a {
+  color: white;
+}
+
+#sidebar .items li a {
+  text-decoration: none;
+  left: 0;
+  color: #fff;
+  font-weight: 300;
+  transition: 0.3s ease;
+}
+
+/* Main content styles */
+#main-content {
+  width: calc(100% - 650px);
+  margin-left: 300px;
+  position: relative;
+}
+
+#main-content .welcome-name {
+  color: #fff;
+  padding: 75px 30px 0 30px;
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.statistics {
+  padding: 30px 30px 0 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.statistics .stat-boxes {
+  background: #1C1C1C;
+  width: 184px;
+  padding: 16px 20px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: 0 .4rem .8rem #0005;
+}
+
+.statistics .stat-boxes h3 {
+  color: #8685ef;
+  font-size: 48px;
+}
+
+.statistics .stat-boxes span {
+  color: #9c9a9a;
+  font-size: 24px;
+}
+
+.camera-display {
+  padding: 30px 30px 0 30px;
+  display: flex;
+}
+
+.camera-display .camera-box {
+  background: #1C1C1C;
+  width: 100%;
+  height: 100%;
+  padding: 16px 20px;
+  border-radius: 15px;
+  box-shadow: 0 .4rem .8rem #0005;
+}
+
+#content-right {
+	width: 400px;
+	height: 100%;
+	margin-top: 70px;
+	margin-right: 80px;
+}
+  
+#content-right .table-box {
+	background: #1c1c1c;
+	width: 100%;
+	margin: 30px 30px 0 30px;
+	border-radius: 15px;
+	padding: 12px 12px 0 12px;
+	box-shadow: 0 .4rem .8rem #0005;
+}
+  
+.table-box .status {
+	padding: 12px 12px 0 12px;
+	width: 24px;
+}
+  
+.table-box h3 {
+	color: #8685ef;
+	font-size: 20px;
+	padding: 10px;
+	text-align: center;
+}
+  
+.status i {
+	color: red;
+	width: 24px;
+	height: auto;
+}
+  
+.student-name {
+	padding: 12px;
+}
+
+.student-info p {
+	color: rgb(220, 220, 220);
+}
+
+.student-info h2 {
+	color: #8685ef;
+}
+  
+.student-name h5 {
+	color: rgb(220, 220, 220);
+	font-size: 18px;
+}
+  
+.student-name p {
+	color:rgb(170, 170, 170);
+	font-size: 14px;
+}
+  
+.student-id, .student-grade, .student-enrolled {
+	color:rgb(170, 170, 170);
+	font-size: 14px;
+	padding: 12px;
+}
+  
+.student-id span, .student-grade span, .student-enrolled span {
+	color: #8685ef;
+	font-size: 16px;
+	margin-left: 10px;
+}
+  
+.student-id i, .student-grade i, .student-enrolled i {
+	color: rgb(170, 170, 170);
+	font-size: 18px;
+	margin-right: 10px;
+}
+  
+#footer {
+	background-color: #101010;
+	height: 80px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 }
-
-.student {
-	margin: 20px;
-	padding: 20px;
-	width: calc(25% - 40px);
-	border: 1px solid #ccc;
-	text-align: center;
-	box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+  
+#footer p {
+	color: rgb(170, 170, 170);
+	font-size: 14px;
 }
-
-.student img {
-	max-width: 100%;
-	height: auto;
-	margin-bottom: 20px;
+  
+#footer a {
+	color: rgb(170, 170, 170);
+	font-size: 14px;
+	margin-left: 5px;
 }
-
-@media screen and (max-width: 1200px) {
-	.student {
-		width: calc(33.33% - 40px);
-	}
+  
+#footer a:hover {
+	color: white;
 }
-
-@media screen and (max-width: 992px) {
-	.student {
-		width: calc(50% - 40px);
-	}
-}
-
-@media screen and (max-width: 768px) {
-	.container {
-		flex-direction: column;
-		align-items: stretch;
-	}
-	.student {
-		width: 100%;
-	}
-}
+  
+ 
