made the arrow longer and a softer color

--- a/classes.css
+++ b/classes.css
@@ -127,7 +127,7 @@ body {
 
 .class-periods .class-boxes i {
     font-size: 50px;
-    color: white;
+    color: #cacaca;
     align-self: flex-end;
 }
 
