--- a/classes.css
+++ b/classes.css
@@ -131,62 +131,29 @@ body {
     align-self: flex-end;
 }
 
-.camera-display {
-    padding: 30px 30px 0 30px;
-    display: flex;
+.create-buttons {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
 }
 
-.camera-display .camera-box {
-    background: #1C1C1C;
+.create-buttons .new-class-button {
+    background: #8685ef;
+    color: #cacaca;
     width: 100%;
     height: 100%;
-    padding: 16px 20px;
-    border-radius: 15px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 30px;
 }
 
-#content-right {
-    width: 400px;
-    height: 100%;
-    margin-top: 70px;
-    margin-right: 80px;
+.create-buttons .new-class-button {
+    font-size: 24px;
 }
 
-#content-right .table-box {
-    background: #1c1c1c;
-    width: 100%;
-    margin: 30px 30px 0 30px;
-    border-radius: 15px;
-    padding: 12px 12px 0 12px;
+.create-buttons .new-class-button i {
+    padding-right: 5px;
 }
 
-.table-box .status {
-    padding: 12px 12px 0 12px;
-    width: 24px;
-}
-
-.table-box h3 {
-    color: #8685ef;
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-}
-
-.status i {
-    color: red;
-    width: 24px;
-    height: auto;
-}
-
-.student-name {
-    padding: 12px;
-}
-
-.student-name h5 {
-    color: rgb(220, 220, 220);
-    font-size: 18px;
-}
-
-.student-name p {
-    color:rgb(170, 170, 170);
-    font-size: 14px;
+.create-buttons .new-class-button .new-class-button-wrapper {
+    padding: 5px 10px;
 }
