--- a/classes.css
+++ b/classes.css
@@ -14,6 +14,11 @@ body {
     display: flex;
 }
 
+a,a:visited {
+    text-decoration: none;
+    color: transparent;
+}
+
 #sidebar {
     background: #101010;
     width: 250px;
@@ -35,6 +40,7 @@ body {
 }
 
 #sidebar .items li {
+    color: #fff;
     list-style: none;
     padding: 15px 0;
     transition: 0.3s ease;
@@ -71,6 +77,7 @@ body {
     color: #fff;
     font-weight: 300px;
     transition: 0.3s ease;
+    width: 100%;
 }
 
 #main-content {
@@ -93,16 +100,6 @@ body {
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-}
-
-.class-periods a {
-    text-decoration: none;
-    color: transparent;
-}
-
-.class-periods a:visited {
-    text-decoration: none;
-    color: transparent;
 }
 
 .class-periods .class-boxes {
