--- a/period-display.css
+++ b/period-display.css
@@ -86,7 +86,7 @@ a,a:visited {
 }
 
 #main-content .welcome-name h1 {
-    color: #fff;
+    color: #8685ef;
     font-size: 4rem;
 }
 
@@ -111,7 +111,7 @@ main.table {
 }
 
 .table-header h1 {
-    color: rgb(213, 213, 213);
+    color: #8685ef;
     font-size: 36px;
 }
 
