--- a/period-display.css
+++ b/period-display.css
@@ -154,7 +154,7 @@ table {
 
 td img {
     width: 48px;
-    height: auto;
+    height: 48px;
     margin-right: 1rem;
     border-radius: 50%;
     vertical-align: middle;
