--- a/period-display.css
+++ b/period-display.css
@@ -215,7 +215,7 @@ tbody tr:hover {
     margin-right: 20px;
     background: #8685ef;
     color: #cacaca;
-    width: 190px;
+    width: 210px;
     height: 100%;
     padding: 10px;
     border-radius: 30px;
@@ -234,7 +234,7 @@ tbody tr:hover {
 .create-buttons .edit-classes-button {
     background: #8685ef;
     color: #cacaca;
-    width: 210px;
+    width: 180px;
     height: 100%;
     padding: 10px;
     border-radius: 30px;
@@ -244,6 +244,61 @@ tbody tr:hover {
 
 .edit-classes-button-wrapper {
     padding: 5px 10px;
+}
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: calc(100% - 250px);
+    margin-left: 250px;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+    background-color: #1c1c1c;
+    color: #fff;
+    border-radius: 10px;
+    margin: auto;
+    padding: 20px;
+    width: 80%;
+}
+
+ .modal-header {
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #151515;
+} 
+
+.modal-header h1 {
+    font-size: 64px;
+    padding: 30px 0 20px 30px;
+}
+
+.modal-header span {
+    width: 48px;
+    height: 48px;
+    padding: 20px 30px 0 0;
+}
+ 
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover,
+.close:focus {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 @media (max-width: 1000px) {
