--- a/dashboard.css
+++ b/dashboard.css
@@ -69,7 +69,7 @@ body {
     text-decoration: none;
     left: 0;
     color: #fff;
-    font-weight: 300px;
+    font-weight: 300;
     transition: 0.3s ease;
 }
 
