--- a/releaseConcept.css
+++ b/releaseConcept.css
@@ -4,7 +4,7 @@ body {
 
 }
 h1 {
-color: #efedfo
+color: #efedf0
 }
 p {
     font-family: 'Circular',sans-serif;
@@ -20,8 +20,8 @@ html, body {
     min-height: 100vh;
     padding: 0;
     margin: 0;
-    font-family: Roboto, Arial, sans-serif;
-    font-size: 14px;
+    font-family: sans-serif;
+    font-size: 16px;
     color: #666;
 }
 input, textarea {
