displaying table on webpage

--- a/flask_server/templates/dashboard.html
+++ b/flask_server/templates/dashboard.html
@@ -58,7 +58,7 @@
 
         <section id="content-right">
             <div class="table-box">
-                
+                {% block content %} {% endblock %}
             </div>
         </section>
 
