--- a/period-display.css
+++ b/period-display.css
@@ -266,6 +266,7 @@ tbody tr:hover {
     border-radius: 10px;
     margin: auto;
     padding: 20px;
+    overflow: hidden;
     width: 80%;
 }
 
@@ -273,7 +274,6 @@ tbody tr:hover {
     color: #fff;
     display: flex;
     justify-content: space-between;
-    border-bottom: 2px solid #151515;
 } 
 
 .modal-header h1 {
@@ -300,6 +300,81 @@ tbody tr:hover {
     text-decoration: none;
     cursor: pointer;
 }
+
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+  
+.checkmark {
+    position: absolute;
+    border-radius: 10%;
+    vertical-align: middle;
+    height: 24px;
+    width: 24px;
+    background-color: #eee;
+}
+  
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+  
+.container input:checked ~ .checkmark {
+    background-color: #8685ef;
+}
+  
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+  
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+  
+.container .checkmark:after {
+    left: 8.6px;
+    top: 4.8px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.modal__btn {
+    float: right;
+    margin-top: 4rem;
+    margin-left: 1rem;
+    padding: 1rem 1.6rem;
+    border: none;
+    border-radius: 100rem;
+    color: #fff;
+    background: #8685ef;
+    font-size: 1.2rem;
+    transition: .2s;
+    cursor: pointer;
+    box-shadow: 0 .4rem .8rem #0005;
+  }
 
 @media (max-width: 1000px) {
     td:not(:first-of-type) {
