updated the html and css of the student information page to make it editable

--- a/studentinformation.css
+++ b/studentinformation.css
@@ -176,6 +176,10 @@ body {
 	color: rgb(220, 220, 220);
 }
 
+.student-info span {
+	color: rgb(220, 220, 220);
+}
+
 .student-info h2 {
 	color: #8685ef;
 }
