--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -19,7 +19,7 @@
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
                     <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
                     <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
-                    <li><a href="/"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+                    <li><a href="/logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
                 </ul>
             </div>
         </section>
