--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,28 +1,16 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
     %}
     <form method="POST">
-      <h3 align="center">Login</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          placeholder="Enter email"
-        />
+      <div class="hero-container">
+        <h1 class="heading">Log In</h1>
+        <div class="form-wrapper">
+            <input type="email" class="form__input" id="name" placeholder="Email" required=""/>
+            <label for="name" class="form__label">Email</label>
+            <input type="password" class="form__input" id="name" placeholder="Password" required=""/>
+            <label for="name" class="form__label">Password</label>
+          </div>
+            <button>Log In</button>
+        <p class="if-you-have">Or if you havent made an account, <a href="/sign-up">Sign Up.</a></p>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password"
-          name="password"
-          placeholder="Enter password"
-        />
-      </div>
-      <br />
-      <button type="submit" class="btn btn-primary">Login</button>
     </form>
     {% endblock %}
