basic time functions

--- a/flask_server/templates/landing.html
+++ b/flask_server/templates/landing.html
@@ -23,7 +23,7 @@
                     <h1>Streamline <span style="color: #8685ef">Attendance</span> Tracking With <span style="color: #8685ef">Facial Recognition</span> Technology</h1>
                     <h3>Eliminate errors and improve efficiency with our cutting-edge facial recognition attendance system</h3>
                 </div>
-                <a href='{{url_for('static',filename='css/singup.css')}}' class="get-started">Get Started</a>
+                <a href='../login' class="get-started">Get Started</a>
             </div>
         </section>
     </body>
