--- a/flask_server/templates/classes.html
+++ b/flask_server/templates/classes.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>Dashboard</title>
+        <script src="{{url_for('static',filename='javascript/time.js')}}"></script>
         <link rel="stylesheet" href="{{url_for('static',filename='css/classes.css')}}" />
         <link rel="icon" type="image/png" href={{url_for('static',filename='images/projectlogo.png')}}/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +21,7 @@
                 </script>
                 <ul> 
                     <!-- currently hardcoding dashboard to table1 -->
-                    <li onclick='nextPage("../table1")'><a><i></i> Dashboard</a></li> 
+                    <li onclick='changePeriod()'><a><i class="fa-solid fa-folder"></i> Dashboard</a></li> 
                     <li><i class="fa-solid fa-folder"></i> Classes</li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
                     <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
