--- a/flask_server/templates/FAQ.html
+++ b/flask_server/templates/FAQ.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>FAQ - Student Attendance Tracking System</title>
-    <link rel="stylesheet" href="FAQ.css">
+    <link rel="stylesheet" href='{{url_for('static',filename='css/FAQ.css')}}' />
   </head>
   <body>
     <header>
