added camera to dashboard

--- a/flask_server/templates/dashboard.html
+++ b/flask_server/templates/dashboard.html
@@ -56,7 +56,7 @@
 
             <div class="camera-display">
                 <div class="camera-box">
-                    <div><!--Insert camera display here--></div>
+                    {% block camera %} {% endblock %}
                 </div>
             </div>
         </section>
