--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,48 +1,25 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
     content %}
     <form method="POST">
-      <h3 align="center">Sign Up</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          placeholder="Enter email"
-        />
-      </div>
-      <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="firstName"
-          name="firstName"
-          placeholder="Enter first name"
-        />
-      </div>
-      <div class="form-group">
-        <label for="password1">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password1"
-          name="password1"
-          placeholder="Enter password"
-        />
-      </div>
-      <div class="form-group">
-        <label for="password2">Password (Confirm)</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password2"
-          name="password2"
-          placeholder="Confirm password"
-        />
-      </div>
-      <br />
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <div class="hero-container">
+        <h1 class="heading">Sign Up</h1>
+          <div class="form-group">
+            <div class="form-wrapper">
+              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Full Name" required=""/>
+              <label for="firstName" class="form__label">Full Name</label>
+
+              <input type="email" class="form-control" name="email" id="email" placeholder="Email" required=""/>
+              <label for="email" class="form__label">Email</label>
+
+              <input type="password" class="form-control" id="password1" name="password1" placeholder="Password" required=""/>
+              <label for="password1" class="form__label">Password</label>
+
+              <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm Password" required=""/>
+              <label for="password2" class="form__label">Confirm Password</label>
+            </div>
+          </div>
+            <button>Sign Up</button> 
+          <p class="if-you-have">Or if you already have an account, <a href="/login">Log In.</a></p>
+        </div>
     </form>
     {% endblock %}
