integrated camera in jinga loops

--- a/flask_server/templates/dashboardTable.html
+++ b/flask_server/templates/dashboardTable.html
@@ -27,3 +27,9 @@
         </tbody>    
     </table>
 {% endblock %}
+
+{% block camera %}
+<div>
+    <img src="{{ url_for('video') }}" width="50%"/>
+</div>
+{% endblock %}
