--- a/website/static/css/login.css
+++ b/website/static/css/login.css
@@ -61,12 +61,13 @@ p {
   color: #fff;
 }
 
-h1 {
+.heading {
+  margin-top: -50px;
   margin-bottom: 3rem;
   font-size: 5vw;
   padding: 1rem 1rem;
   font-weight: bold;
-  color: #fff;
+  color: #8685ef;
 }
 
 .hero-container button {
@@ -74,6 +75,7 @@ h1 {
   font-size: 1.5vw;
   font-family: 'Circular', sans-serif;
   font-weight: lighter;
+  margin-top: 20px;
   margin-bottom: 20px;
   border: none;
   color:#fff;
@@ -107,7 +109,7 @@ h1 {
 }
 
 .form__label {
-  color: #fff;
+  color: #8685ef;
   margin-bottom: 0.7rem;
   font-size: 1vw;
   transition: all 0.3s;
