fixed the images, cleaned up the repo

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -11,7 +11,7 @@
     <body>
 
         <section id="sidebar">
-            <img src="images/projectlogo.png" class="logo">
+            <img src="{{ url_for('static', filename ='images/projectlogo.png') }}" class="logo">
             <div class="items">
                 <ul>
                     <li><a><i class="fa-solid fa-house"></i> Dashboard</a></li>
