--- a/flask_server/templates/camera.html
+++ b/flask_server/templates/camera.html
@@ -2,6 +2,6 @@
 
 {% block camera %}
 <div>
-    <img src="{{ url_for('video') }}" width="50%"/>
+    <img src="{{ url_for('video') }}" width="100%" class="center"/>
 </div>
 {% endblock %}
