updated database w/ dif classes. classes.html WIP

--- a/flask_server/templates/classes.html
+++ b/flask_server/templates/classes.html
@@ -46,8 +46,8 @@
                     <i class="fa-solid fa-arrow-right-long"></i>
                 </div>
                 </a>
+                <!-- {% block class %}{% endblock %} -->
             </div>
-
             <div class="create-buttons">
                 <a href="/">
                     <div class="new-class-button">
