Working on account systems and linking routes

--- a/flask_server/templates/landing.html
+++ b/flask_server/templates/landing.html
@@ -11,8 +11,8 @@
         <nav>
             <div class="logo"><img src="images/projectlogo.png" class="logo-image"></div>
             <div class="nav-items">
-                <a href="login.html">Log In</a>
-                <a href="signup.html">Sign Up</a>
+                <a href="/login">Log In</a>
+                <a href="/sign-up">Sign Up</a>
             </div>
         </nav>
         <section class="hero">
@@ -21,7 +21,7 @@
                     <h1>Streamline <span style="color: #8685ef">Attendance</span> Tracking With <span style="color: #8685ef">Facial Recognition</span> Technology</h1>
                     <h3>Eliminate errors and improve efficiency with our cutting-edge facial recognition attendance system</h3>
                 </div>
-                <a href="signup.html" class="get-started">Get Started</a>
+                <a href="/sign-up" class="get-started">Get Started</a>
             </div>
         </section>
         <section class="bubble">
