--- a/flask_server/templates/landing.html
+++ b/flask_server/templates/landing.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>Automated Attendance</title>
         <link rel="stylesheet" href='{{url_for('static',filename='css/landing.css')}}' />
-        <link rel="icon" type="image/png" href="images/autoattendlogo.png"/>
+        <link rel="icon" type="image/png" href="'{{url_for('static',filename='images/landing.css')}}'"/>
     </head>
     <body>
         <nav>
             <div class="logo"><img src="images/projectlogo.png" class="logo-image"></div>
             <div class="nav-items">
-                <a href="login.html">Log In</a>
-                <a href="signup.html">Sign Up</a>
+                <a href="login">Log In</a>
+                <a href="sign-up">Sign Up</a>
             </div>
         </nav>
         <section class="hero">
@@ -21,7 +21,7 @@
                     <h1>Streamline <span style="color: #8685ef">Attendance</span> Tracking With <span style="color: #8685ef">Facial Recognition</span> Technology</h1>
                     <h3>Eliminate errors and improve efficiency with our cutting-edge facial recognition attendance system</h3>
                 </div>
-                <a href="signup.html" class="get-started">Get Started</a>
+                <a href="sign-up" class="get-started">Get Started</a>
             </div>
         </section>
         <section class="bubble">
